Issue #3282: str.isprintable() should return False for undefined Unicode characters.